assignment3/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
spec:
  selector:
    app: app-1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
