assignment3/app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
spec:
  type: ClusterIP
  selector:
    run: app-2
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
